Cleaning things up in the login/out and starting some styling with scss.

--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+    section {
+        background-image: url(./docs/dark_city.jpg);
+        background-size: 100%;
+        .sign_in-out-up {
+          
+    
+        }
+    }
+
+
+}
+
