--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -4,11 +4,10 @@
 
 body {
     section {
-        background-image: url(./docs/dark_city.jpg);
+        background-image: url(image_path('dark_city.jpg'));
         background-size: 100%;
         .sign_in-out-up {
-          
-    
+            
         }
     }
 
