--- a/src/app/views/layouts/_header.html.erb
+++ b/src/app/views/layouts/_header.html.erb
@@ -15,6 +15,8 @@
     <nav class= "header">
         <% if runner_signed_in?%>
         <p> Current User: <%= current_runner.first_name %></p>
+        <% else %>
+        <p></p>
         <% end %>
         <p id="title">Runnerfy</p>
         <ul>
@@ -24,8 +26,18 @@
             <%if current_runner %>
             <li><%= link_to("EDIT PROFILE", edit_runner_path(current_runner), class: "links") %></li>
             <% end %> 
+            <li>
+                <% if current_runner %>
+                <%= link_to "SIGN OUT", destroy_runner_session_path, method: :delete, class: "links" %>
+                <% else %>
+                <%= link_to "SIGN IN", new_runner_session_path, class: "links" %>
+                <br>
+                <%= link_to "SIGN UP", new_runner_registration_path, class: "links" %>
+                <% end %>
+            </li>
         </ul>
     </nav>
+
 
     <%= yield %>
   </body>
