--- a/src/app/assets/stylesheets/application.scss
+++ b/src/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgb(0, 0, 0);
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
