--- a/src/app/views/pages/home.html.erb
+++ b/src/app/views/pages/home.html.erb
@@ -15,17 +15,36 @@
         <section>
             <div class="home-intro-pics">
                 <div id="profile-img">
-                    <%= link_to image_tag("running_forest.jpg", :alt => "running in forest"), runner_path(current_runner) %>
+                    <%= link_to image_tag("running_forest.jpg", :alt => "running in forest"), runner_path(current_runner), id: "img1" %>
+                    <div id="overlay1">
+                          Profile Home
+                    </div>
                 </div>
                 <div id="search-img">
-                        <%= link_to image_tag("running_partner.jpg", :alt => "running in forest"), runners_path %>
+                        <%= link_to image_tag("running_partner.jpg", :alt => "running in forest"), runners_path, id: "img2" %>
+                        <div id="overlay2">
+                                <h2>Runner</h2>
+                                <h2>Search</h2>
+                              </div>
                 </div>
                 <div id="other-img">
-                        <%= link_to image_tag("running_forest.jpg", :alt => "running in forest"), runners_path %>
+                        <%= link_to image_tag("running_forest.jpg", :alt => "running in forest"), runners_path, id: "img3" %>
+                        <div id="overlay3">
+                                <h2>Other</h2>
+                                <h2>Option</h2>
+                              </div>
                 </div>
             </div>
             
-            
+            <div id="other-links">
+                    <div id="box1">
+                        <div><%= image_tag("add_contact.png", :alt => "partners running", id: "friends-icon") %></div>
+                        <div> <p>Make new Friends</p></div>
+
+                    </div>
+                    <div id="box2">Improve your fitness level </div>
+                    <div id="box3">Find yourself at the top of your game</div>
+            </div>
     
         </section>   
         
