Getting the profile to be created when a user is created. Works.

--- a/src/app/views/pages/home.html.erb
+++ b/src/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
         <section>
             <div class="home-intro-pics">
                 <div id="profile-img">
-                    <%= link_to image_tag("running_forest.jpg", :alt => "running in forest"), runner_path(current_runner), id: "img1" %>
+                    <%= link_to image_tag("running_forest.jpg", :alt => "running in forest"), runners_path, id: "img1" %>
                     <div id="overlay1">
                           Profile Home
                     </div>
