--- a/src/app/views/runners/show.html.erb
+++ b/src/app/views/runners/show.html.erb
@@ -1,10 +1,5 @@
 <%= render "layouts/header" %>
 
-<h1>Runners#show</h1>
-<p>Find me in app/views/runners/show.html.erb</p>
+<h1>Runners#show page</h1>
 
-
-<!-- 
-<p>
-    <%= image_tag @runner.image, width: 300 %>
-</p> -->
+<h2><%= @runner.email %></h2>
