--- a/src/app/views/runners/_form.html.erb
+++ b/src/app/views/runners/_form.html.erb
@@ -1,48 +1,21 @@
 <%= form_with(model: runner, local: true) do |f| %>
 
+<%= f.fields_for :profile do |f| %>
 <div>
     <%= f.label :username %>
     <%= f.text_field :username %>
 </div>
 
 <div>
-    <%= f.label :image %>
-    <%= f.file_field :image %>
+    <%= f.label :age %>
+    <%= f.number_field :age %>
 </div>
 
 <div>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+    <%= f.label :gender %>
+    <%= f.text_field :gender %>
 </div>
-
-<div>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-</div>
-
-<div>
-    <%= f.label :email %>
-    <%= f.email_field :email %>
-</div>
-
-<div>
-    <%= f.label :bio %>
-    <%= f.text_field :bio %>
-</div>
-
-<div class="field">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
-    
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
-
+<% end %>
 <div>
     <%= f.submit %>
 </div>
