--- a/src/app/views/pages/home.html.erb
+++ b/src/app/views/pages/home.html.erb
@@ -15,20 +15,20 @@
         <section>
             <div class="home-intro-pics">
                 <div id="profile-img">
-                    <%= link_to image_tag("running_forest.jpg", :alt => "running in forest"), runners_path, id: "img1" %>
+                    <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img1") %>
                     <div id="overlay1">
                           Profile Home
                     </div>
                 </div>
                 <div id="search-img">
-                        <%= link_to image_tag("running_partner.jpg", :alt => "running in forest"), runners_path, id: "img2" %>
+                    <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img2") %>
                         <div id="overlay2">
                                 <h2>Runner</h2>
                                 <h2>Search</h2>
                               </div>
                 </div>
                 <div id="other-img">
-                        <%= link_to image_tag("running_forest.jpg", :alt => "running in forest"), runners_path, id: "img3" %>
+                    <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img3" )%>
                         <div id="overlay3">
                                 <h2>Other</h2>
                                 <h2>Option</h2>
@@ -48,11 +48,6 @@
     
         </section>   
         
-            
-
-
-        
-        <script src="" async defer></script>
     </body>
 </html>
 
