--- a/src/app/assets/stylesheets/application.scss
+++ b/src/app/assets/stylesheets/application.scss
@@ -22,11 +22,18 @@ body {
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    ul {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
     #title {
       font-size: 4rem;
       color: orange;
     }
     .links {
+
       color: orange;
       &:hover {
         color: yellow;
