Setting up styling for login page

--- a/src/app/views/layouts/_header.html.erb
+++ b/src/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <% else %>
         <p></p>
         <% end %>
-        <p id="title">Runnerfy</p>
+        <p id="title">Co. name here</p>
         <ul>
             <li><%= link_to("HOME", root_path, class: "links") %></li>
             <li><%= link_to("ALL USERS", runners_path, class: "links") %></li>
