--- a/src/app/assets/stylesheets/devise.scss
+++ b/src/app/assets/stylesheets/devise.scss
@@ -1,36 +1,73 @@
-body {
+
+
+.devise-body {
+    h1 {
+        font-size: 2.25rem;
+        color: black;
+        text-align: center;
+      }
+      h2 {
+        font-size: 1rem;
+        color: black;
+             text-align: center;
+      }
   section {
     display: grid;
     grid-template-columns: 1fr 2fr;
     height: 100vh;
     #login-left {
       .field {
-        font-family: didot, serif;
+        font-family: Roboto;
         color: black;
       }
       .actions {
         input {
-        font-family: didot, serif;
-        color: black;
-        background: rgba(255, 217, 0, 0.658);
+          width: 100%;
+          color: black;
+          background: rgba(255, 217, 0, 0.658);
         }
-    }
+      }
+
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       background: transparent;
       #login-left-top {
+     
         grid-area: 1/1/2/4;
-        justify-self: center;
         align-self: center;
+        justify-self: center;
+        width: 50%;
+        #login-left-top-welcome {
+            justify-content: center;
+            display: grid;
+            grid-template-rows: 1fr 1fr 50px;
+            justify-content: center;
+            align-items: end;
+            #welcome-img {
+                img {
+                    height: 100px;
+                }
+            }
+            div {
+                justify-self: center;
+            }
+        }
+
       }
       #login-left-left {
         background: transparent;
       }
       #login-left-center {
-          padding: 20px 40px 20px 40px;
+        padding: 20px 40px 20px 40px;
         background: rgba(128, 128, 128, 0.322);
-        align-self: center;
         justify-self: center;
+        align-self: start;
+        margin-top: 50px;
+        p {
+            padding: 5px 5px 5px 0px;
+            margin-left: 20px;
+            font-weight: bold;
+        }
       }
       #login-left-right {
         background: transparent;
@@ -46,7 +83,14 @@ body {
   }
 }
 @media only screen and (min-width: 651px) and (max-width: 1200px) {
-  body {
+  .devise-body {
+      img {
+          margin: 20px;
+      }
+      h1, h2 {
+          background-color: rgba(255, 187, 0, 0.800);
+          padding: 5px;
+      }
     background-image: url(image_path("runner_looking.jpg"));
     background-size: cover;
     background-image: center center;
@@ -61,7 +105,6 @@ body {
 
         #login-left-center {
           background: rgba(255, 255, 255, 0.452);
-       
         }
       }
     }
@@ -69,40 +112,47 @@ body {
 }
 
 @media only screen and (max-width: 650px) {
-  body {
+  .devise-body {
+ 
     background-image: url(image_path("running_login_mobile.jpg"));
     background-size: cover;
+    background-repeat: repeat-y;
     background-image: center center;
     background-color: rgba(255, 187, 0, 0.76);
     background-blend-mode: luminosity;
+    img {
+        margin: 20px;
+    }
+    h1, h2 {
+        background-color: rgba(255, 187, 0, 0.800);
+        padding: 5px;
+        text-align: center;
+    }
     section {
+        height: auto;
       #login-left {
         .field {
-          font-family: didot, serif;
           color: black;
           font-size: 3rem;
           margin-left: 20px;
           input {
-            
-                width: 95%;
-                height: 3rem;
-                font-size: 2rem;
-          
+            width: 100%;
+            height: 3rem;
+            font-size: 2rem;
           }
         }
-        .box-field 
-        {
-            margin-left: 20px;
-            font-size: 1.5rem;
+        .box-field {
+          margin-left: 20px;
+          font-size: 1.5rem;
         }
         .actions {
-            input {
-            font-family: didot, serif;
+          input {
+         
             color: black;
             font-size: 2rem;
 
             margin-left: 20px;
-            }
+          }
         }
       }
 
@@ -113,7 +163,11 @@ body {
         grid-area: 1/1/2/3;
 
         #login-left-center {
-          background: rgba(255, 255, 255, 0.452);
+            p {
+                margin-left: 50px;
+                font-size: 2.5rem;
+            }
+          background: rgba(255, 255, 255, 0.582);
           grid-area: 2/1/100/100;
           justify-self: stretch;
         }
