--- a/src/app/views/profiles/index.html.erb
+++ b/src/app/views/profiles/index.html.erb
@@ -1,6 +1,5 @@
-<%= render "layouts/header" %>
-
-<h1>Runners#index</h1>
+<h1>Profiles#index</h1>
+<p>Find me in app/views/profiles/index.html.erb</p>
 
 
 
@@ -23,4 +22,3 @@
     </tr>
 <% end %> 
 </table>
-
