--- a/src/app/views/runners/show.html.erb
+++ b/src/app/views/runners/show.html.erb
@@ -2,7 +2,12 @@
 
 <h1>Runners#show page</h1>
 
-<h2><%= @runner.email %></h2>
-<h2><%= @runner.profile.username %></h2>
+<h2>Email: <%= @runner.email %></h2>
+<h2>Username: <%= @runner.profile.username %></h2>
+<h2>Age: <%= @runner.profile.age %></h2>
+<h2>Gender: <%= @runner.profile.gender %></h2>
+<h2>Pace: <%= @runner.profile.pace %></h2>
+
+
 
 
