Getting pics onto profile controller via the runner. Getting links to show pages to display profile via profile page, not the runner(user). Cleaning up.

--- a/src/app/assets/stylesheets/application.scss
+++ b/src/app/assets/stylesheets/application.scss
@@ -30,11 +30,11 @@ body {
     }
     #title {
       font-size: 3rem;
-      color: orange;
+      color: rgb(203, 190, 14);
     }
     .links {
 
-      color: orange;
+      color: rgb(203, 190, 14);
       &:hover {
         color: yellow;
       }
