--- a/src/app/views/layouts/_header.html.erb
+++ b/src/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
         <p id="title"><%= image_tag("Runnerfy_logo_app.png", :alt => "runnerfy_logo", id: "img1") %></p>
         <ul>
             <li><%= link_to("HOME", root_path, class: "links") %></li>
-            <li><%= link_to("ALL USERS", runners_path, class: "links") %></li>
+            <li><%= link_to("ALL USERS", profiles_path, class: "links") %></li>
             <li><%= link_to("ABOUT US", pages_about_us_path, class: "links") %></li>
 
             <%if current_runner %>
