--- a/src/app/views/pages/home.html.erb
+++ b/src/app/views/pages/home.html.erb
@@ -8,23 +8,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body>
+    <body> 
             <header>
                 <%= render "layouts/header" %>
             </header>
         <section>
             <div class="home-intro-pics">
                 <div id="profile-img">
-                    <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img1") %>
+                    <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img1")%>
                     <div id="overlay1">
-                          Profile Home
+                        <a href="google.com"><h1>Profiles</h1></a>
                     </div>
                 </div>
                 <div id="search-img">
                     <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img2") %>
                         <div id="overlay2">
-                                <h2>Runner</h2>
-                                <h2>Search</h2>
+                                <h1>Runner</h1>
+                                <h1>Search</h1>
                               </div>
                 </div>
                 <div id="other-img">
