--- a/src/app/views/runners/show.html.erb
+++ b/src/app/views/runners/show.html.erb
@@ -7,6 +7,7 @@
 <h2>Age: <%= @runner.profile.age %></h2>
 <h2>Gender: <%= @runner.profile.gender %></h2>
 <h2>Pace: <%= @runner.profile.pace %></h2>
+<h2>Pace: <%= @runner.profile.image %></h2>
 
 
 
