--- a/src/app/assets/stylesheets/devise.scss
+++ b/src/app/assets/stylesheets/devise.scss
@@ -24,7 +24,7 @@
         input {
           width: 100%;
           color: black;
-          background: rgba(255, 217, 0, 0.658);
+          background: #cbbd0e;
         }
       }
 
@@ -32,11 +32,10 @@
       grid-template-columns: 1fr 1fr 1fr;
       background: transparent;
       #login-left-top {
-     
         grid-area: 1/1/2/4;
         align-self: center;
         justify-self: center;
-        width: 50%;
+        width: 75%;
         #login-left-top-welcome {
             justify-content: center;
             display: grid;
@@ -45,7 +44,10 @@
             align-items: end;
             #welcome-img {
                 img {
-                    height: 100px;
+                    height: auto;
+                    max-height: 100px;
+                    width: auto;
+                   
                 }
             }
             div {
@@ -77,7 +79,7 @@
       background-image: url(image_path("runner_looking.jpg"));
       background-size: cover;
       background-image: center center;
-      background-color: rgba(255, 187, 0, 0.377);
+      background-color: rgba(203, 190, 14, 0.253);
       background-blend-mode: luminosity;
     }
   }
@@ -88,13 +90,13 @@
           margin: 20px;
       }
       h1, h2 {
-          background-color: rgba(255, 187, 0, 0.800);
+          background-color: rgba(203, 190, 14, 0.801);
           padding: 5px;
       }
     background-image: url(image_path("runner_looking.jpg"));
     background-size: cover;
     background-image: center center;
-    background-color: rgba(255, 187, 0, 0.377);
+    background-color: rgba(203, 190, 14, 0.267);
     background-blend-mode: luminosity;
     section {
       #login-right {
@@ -118,13 +120,13 @@
     background-size: cover;
     background-repeat: repeat-y;
     background-image: center center;
-    background-color: rgba(255, 187, 0, 0.76);
+    background-color: rgba(203, 190, 14, 0.411);
     background-blend-mode: luminosity;
     img {
         margin: 20px;
     }
     h1, h2 {
-        background-color: rgba(255, 187, 0, 0.800);
+        background-color: rgba(203, 190, 14, 0.808);
         padding: 5px;
         text-align: center;
     }
@@ -161,6 +163,7 @@
       }
       #login-left {
         grid-area: 1/1/2/3;
+        
 
         #login-left-center {
             p {
