--- a/src/app/views/profiles/index.html.erb
+++ b/src/app/views/profiles/index.html.erb
@@ -10,12 +10,15 @@
 
 <% end %>
 
+
+only want these to show if admin or after doing a search. Can't view all all the time? Leave if no time to fix.
 <table>
     <thead>
     <tr>
      <th>username   .</th>
         <th>pace   .</th>
         <th>gender   .</th>
+        <th>profile-pic   .</th>
     </tr>
         </thead>
         <tbody>
@@ -24,6 +27,7 @@
         <td><%= profile.username %>
          <td><%= profile.pace %>
         <td><%= profile.gender %>
+        <td><%= profile.image.attached? ? image_tag(profile.image, height: 20) : "" %></td>
     </tr>
 <% end %> 
  </tbody>
