--- a/src/app/views/profiles/show.html.erb
+++ b/src/app/views/profiles/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Profiles#show</h1>
-<p>Find me in app/views/profiles/show.html.erb</p>
+<%= render "layouts/header" %>
+
+<h1>Profiles#show page</h1>
+
+
+<h2>Username: <%= @profile.username %></h2>
+<h2>Age: <%= @profile.age %></h2>
+<h2>Gender: <%= @profile.gender %></h2>
+<h2>Pace: <%= @profile.pace %></h2>
+<%= @profile.image.attached? ? image_tag(@profile.image, height: 40) : "" %>
+
+
+
