--- a/src/app/views/runners/new.html.erb
+++ b/src/app/views/runners/new.html.erb
@@ -1,7 +1,24 @@
-<%= render "layouts/header" %>
+<!DOCTYPE html>
+<html class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body> 
+            <header>
+                <%= render "layouts/header" %>
+            </header>
+
 
 <h1>Runners#new</h1>
 <p>Find me in app/views/runners/new.html.erb</p>
 
 <%= render 'form', runner: @runner %>
 
+
+</body>
+</html>
