--- a/src/app/views/profiles/show.html.erb
+++ b/src/app/views/profiles/show.html.erb
@@ -1,13 +1,24 @@
-<%= render "layouts/header" %>
+<!DOCTYPE html>
+<html class="no-js">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
+  </head>
+  <body>
+    <header>
+      <%= render "layouts/header" %>
+    </header>
 
-<h1>Profiles#show page</h1>
+    <h1>Profiles#show page</h1>
 
-
-<h2>Username: <%= @profile.username %></h2>
-<h2>Age: <%= @profile.age %></h2>
-<h2>Gender: <%= @profile.gender %></h2>
-<h2>Pace: <%= @profile.pace %></h2>
-<%= @profile.image.attached? ? image_tag(@profile.image, height: 40) : "" %>
-
-
-
+    <h2>Username: <%= @profile.username %></h2>
+    <h2>Age: <%= @profile.age %></h2>
+    <h2>Gender: <%= @profile.gender %></h2>
+    <h2>Pace: <%= @profile.pace %></h2>
+    <%= @profile.image.attached? ? image_tag(@profile.image, height: 40) : "" %>
+  </body>
+</html>
