--- a/src/app/views/runners/show.html.erb
+++ b/src/app/views/runners/show.html.erb
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body> 
+            <header>
+                <%= render "layouts/header" %>
+            </header>
+
+
+
 <%= render "layouts/header" %>
 
 <h1>Runners#show page</h1>
@@ -10,5 +27,7 @@
 <h2>Pace: <%= @runner.profile.image %></h2>
 
 
+</body>
+</html>
 
 
